IDEA/gen/ksp/kos/ideaplugin/parser/KerboScriptParser.java
// This is a generated file. Not intended for manual editing.
package ksp.kos.ideaplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static ksp.kos.ideaplugin.psi.KerboScriptTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class KerboScriptParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ADD_STMT) {
      r = add_stmt(b, 0);
    }
    else if (t == AND_EXPR) {
      r = and_expr(b, 0);
    }
    else if (t == ARGLIST) {
      r = arglist(b, 0);
    }
    else if (t == ARITH_EXPR) {
      r = arith_expr(b, 0);
    }
    else if (t == ARRAY_TRAILER) {
      r = array_trailer(b, 0);
    }
    else if (t == ATOM) {
      r = atom(b, 0);
    }
    else if (t == BREAK_STMT) {
      r = break_stmt(b, 0);
    }
    else if (t == CLEAR_STMT) {
      r = clear_stmt(b, 0);
    }
    else if (t == COMPARE_EXPR) {
      r = compare_expr(b, 0);
    }
    else if (t == COMPILE_STMT) {
      r = compile_stmt(b, 0);
    }
    else if (t == COPY_STMT) {
      r = copy_stmt(b, 0);
    }
    else if (t == DECLARE_FUNCTION_CLAUSE) {
      r = declare_function_clause(b, 0);
    }
    else if (t == DECLARE_IDENTIFIER_CLAUSE) {
      r = declare_identifier_clause(b, 0);
    }
    else if (t == DECLARE_LOCK_CLAUSE) {
      r = declare_lock_clause(b, 0);
    }
    else if (t == DECLARE_PARAMETER_CLAUSE) {
      r = declare_parameter_clause(b, 0);
    }
    else if (t == DECLARE_STMT) {
      r = declare_stmt(b, 0);
    }
    else if (t == DELETE_STMT) {
      r = delete_stmt(b, 0);
    }
    else if (t == DIRECTIVE) {
      r = directive(b, 0);
    }
    else if (t == EDIT_STMT) {
      r = edit_stmt(b, 0);
    }
    else if (t == EXPR) {
      r = expr(b, 0);
    }
    else if (t == FACTOR) {
      r = factor(b, 0);
    }
    else if (t == FOR_STMT) {
      r = for_stmt(b, 0);
    }
    else if (t == FROMLOOP_STMT) {
      r = fromloop_stmt(b, 0);
    }
    else if (t == FUNCTION_TRAILER) {
      r = function_trailer(b, 0);
    }
    else if (t == IDENTIFIER_LED_EXPR) {
      r = identifier_led_expr(b, 0);
    }
    else if (t == IDENTIFIER_LED_STMT) {
      r = identifier_led_stmt(b, 0);
    }
    else if (t == IF_STMT) {
      r = if_stmt(b, 0);
    }
    else if (t == INSTRUCTION) {
      r = instruction(b, 0);
    }
    else if (t == INSTRUCTION_BLOCK) {
      r = instruction_block(b, 0);
    }
    else if (t == LAZYGLOBAL_DIRECTIVE) {
      r = lazyglobal_directive(b, 0);
    }
    else if (t == LIST_STMT) {
      r = list_stmt(b, 0);
    }
    else if (t == LOG_STMT) {
      r = log_stmt(b, 0);
    }
    else if (t == MULTDIV_EXPR) {
      r = multdiv_expr(b, 0);
    }
    else if (t == NUMBER) {
      r = number(b, 0);
    }
    else if (t == ON_STMT) {
      r = on_stmt(b, 0);
    }
    else if (t == ONOFF_STMT) {
      r = onoff_stmt(b, 0);
    }
    else if (t == ONOFF_TRAILER) {
      r = onoff_trailer(b, 0);
    }
    else if (t == PRESERVE_STMT) {
      r = preserve_stmt(b, 0);
    }
    else if (t == PRINT_STMT) {
      r = print_stmt(b, 0);
    }
    else if (t == REBOOT_STMT) {
      r = reboot_stmt(b, 0);
    }
    else if (t == REMOVE_STMT) {
      r = remove_stmt(b, 0);
    }
    else if (t == RENAME_STMT) {
      r = rename_stmt(b, 0);
    }
    else if (t == RETURN_STMT) {
      r = return_stmt(b, 0);
    }
    else if (t == RUN_STMT) {
      r = run_stmt(b, 0);
    }
    else if (t == SCI_NUMBER) {
      r = sci_number(b, 0);
    }
    else if (t == SET_STMT) {
      r = set_stmt(b, 0);
    }
    else if (t == SHUTDOWN_STMT) {
      r = shutdown_stmt(b, 0);
    }
    else if (t == STAGE_STMT) {
      r = stage_stmt(b, 0);
    }
    else if (t == SUFFIX) {
      r = suffix(b, 0);
    }
    else if (t == SUFFIX_TRAILER) {
      r = suffix_trailer(b, 0);
    }
    else if (t == SUFFIXTERM) {
      r = suffixterm(b, 0);
    }
    else if (t == SUFFIXTERM_TRAILER) {
      r = suffixterm_trailer(b, 0);
    }
    else if (t == SWITCH_STMT) {
      r = switch_stmt(b, 0);
    }
    else if (t == TOGGLE_STMT) {
      r = toggle_stmt(b, 0);
    }
    else if (t == UNARY_EXPR) {
      r = unary_expr(b, 0);
    }
    else if (t == UNLOCK_STMT) {
      r = unlock_stmt(b, 0);
    }
    else if (t == UNSET_STMT) {
      r = unset_stmt(b, 0);
    }
    else if (t == UNTIL_STMT) {
      r = until_stmt(b, 0);
    }
    else if (t == VARIDENTIFIER) {
      r = varidentifier(b, 0);
    }
    else if (t == WAIT_STMT) {
      r = wait_stmt(b, 0);
    }
    else if (t == WHEN_STMT) {
      r = when_stmt(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Start(b, l + 1);
  }

  /* ********************************************************** */
  // (instruction)*
  static boolean Start(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Start")) return false;
    int c = current_position_(b);
    while (true) {
      if (!Start_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Start", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (instruction)
  private static boolean Start_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Start_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = instruction(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ADD expr EOI
  public static boolean add_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "add_stmt")) return false;
    if (!nextTokenIs(b, ADD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ADD);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, EOI);
    exit_section_(b, m, ADD_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // compare_expr (AND compare_expr)*
  public static boolean and_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<and expr>");
    r = compare_expr(b, l + 1);
    r = r && and_expr_1(b, l + 1);
    exit_section_(b, l, m, AND_EXPR, r, false, null);
    return r;
  }

  // (AND compare_expr)*
  private static boolean and_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!and_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "and_expr_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // AND compare_expr
  private static boolean and_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && compare_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr (COMMA expr)*
  public static boolean arglist(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arglist")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<arglist>");
    r = expr(b, l + 1);
    r = r && arglist_1(b, l + 1);
    exit_section_(b, l, m, ARGLIST, r, false, null);
    return r;
  }

  // (COMMA expr)*
  private static boolean arglist_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arglist_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!arglist_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arglist_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA expr
  private static boolean arglist_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arglist_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // multdiv_expr (PLUSMINUS multdiv_expr)*
  public static boolean arith_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<arith expr>");
    r = multdiv_expr(b, l + 1);
    r = r && arith_expr_1(b, l + 1);
    exit_section_(b, l, m, ARITH_EXPR, r, false, null);
    return r;
  }

  // (PLUSMINUS multdiv_expr)*
  private static boolean arith_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!arith_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arith_expr_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // PLUSMINUS multdiv_expr
  private static boolean arith_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PLUSMINUS);
    r = r && multdiv_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (ARRAYINDEX (IDENTIFIER | INTEGER)) | (SQUAREOPEN expr SQUARECLOSE)
  public static boolean array_trailer(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_trailer")) return false;
    if (!nextTokenIs(b, "<array trailer>", ARRAYINDEX, SQUAREOPEN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<array trailer>");
    r = array_trailer_0(b, l + 1);
    if (!r) r = array_trailer_1(b, l + 1);
    exit_section_(b, l, m, ARRAY_TRAILER, r, false, null);
    return r;
  }

  // ARRAYINDEX (IDENTIFIER | INTEGER)
  private static boolean array_trailer_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_trailer_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ARRAYINDEX);
    r = r && array_trailer_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // IDENTIFIER | INTEGER
  private static boolean array_trailer_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_trailer_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, INTEGER);
    exit_section_(b, m, null, r);
    return r;
  }

  // SQUAREOPEN expr SQUARECLOSE
  private static boolean array_trailer_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_trailer_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SQUAREOPEN);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, SQUARECLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ( sci_number |
  //                         TRUEFALSE |
  //                         IDENTIFIER |
  //                         FILEIDENT |
  //                         BRACKETOPEN expr BRACKETCLOSE
  //                       ) | STRING
  public static boolean atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<atom>");
    r = atom_0(b, l + 1);
    if (!r) r = consumeToken(b, STRING);
    exit_section_(b, l, m, ATOM, r, false, null);
    return r;
  }

  // sci_number |
  //                         TRUEFALSE |
  //                         IDENTIFIER |
  //                         FILEIDENT |
  //                         BRACKETOPEN expr BRACKETCLOSE
  private static boolean atom_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = sci_number(b, l + 1);
    if (!r) r = consumeToken(b, TRUEFALSE);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, FILEIDENT);
    if (!r) r = atom_0_4(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // BRACKETOPEN expr BRACKETCLOSE
  private static boolean atom_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_0_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACKETOPEN);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, BRACKETCLOSE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // BREAK EOI
  public static boolean break_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "break_stmt")) return false;
    if (!nextTokenIs(b, BREAK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BREAK, EOI);
    exit_section_(b, m, BREAK_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // CLEARSCREEN EOI
  public static boolean clear_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "clear_stmt")) return false;
    if (!nextTokenIs(b, CLEARSCREEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CLEARSCREEN, EOI);
    exit_section_(b, m, CLEAR_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // arith_expr (COMPARATOR arith_expr)*
  public static boolean compare_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compare_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<compare expr>");
    r = arith_expr(b, l + 1);
    r = r && compare_expr_1(b, l + 1);
    exit_section_(b, l, m, COMPARE_EXPR, r, false, null);
    return r;
  }

  // (COMPARATOR arith_expr)*
  private static boolean compare_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compare_expr_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!compare_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "compare_expr_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMPARATOR arith_expr
  private static boolean compare_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compare_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMPARATOR);
    r = r && arith_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // COMPILE expr (TO expr)? EOI
  public static boolean compile_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compile_stmt")) return false;
    if (!nextTokenIs(b, COMPILE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMPILE);
    r = r && expr(b, l + 1);
    r = r && compile_stmt_2(b, l + 1);
    r = r && consumeToken(b, EOI);
    exit_section_(b, m, COMPILE_STMT, r);
    return r;
  }

  // (TO expr)?
  private static boolean compile_stmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compile_stmt_2")) return false;
    compile_stmt_2_0(b, l + 1);
    return true;
  }

  // TO expr
  private static boolean compile_stmt_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compile_stmt_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TO);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // COPY expr (FROM | TO) expr EOI
  public static boolean copy_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "copy_stmt")) return false;
    if (!nextTokenIs(b, COPY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COPY);
    r = r && expr(b, l + 1);
    r = r && copy_stmt_2(b, l + 1);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, EOI);
    exit_section_(b, m, COPY_STMT, r);
    return r;
  }

  // FROM | TO
  private static boolean copy_stmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "copy_stmt_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FROM);
    if (!r) r = consumeToken(b, TO);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // FUNCTION IDENTIFIER instruction_block EOI?
  public static boolean declare_function_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_function_clause")) return false;
    if (!nextTokenIs(b, FUNCTION)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FUNCTION, IDENTIFIER);
    r = r && instruction_block(b, l + 1);
    r = r && declare_function_clause_3(b, l + 1);
    exit_section_(b, m, DECLARE_FUNCTION_CLAUSE, r);
    return r;
  }

  // EOI?
  private static boolean declare_function_clause_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_function_clause_3")) return false;
    consumeToken(b, EOI);
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER (TO|IS) expr EOI
  public static boolean declare_identifier_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_identifier_clause")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && declare_identifier_clause_1(b, l + 1);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, EOI);
    exit_section_(b, m, DECLARE_IDENTIFIER_CLAUSE, r);
    return r;
  }

  // TO|IS
  private static boolean declare_identifier_clause_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_identifier_clause_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TO);
    if (!r) r = consumeToken(b, IS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LOCK IDENTIFIER TO expr EOI
  public static boolean declare_lock_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_lock_clause")) return false;
    if (!nextTokenIs(b, LOCK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LOCK, IDENTIFIER, TO);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, EOI);
    exit_section_(b, m, DECLARE_LOCK_CLAUSE, r);
    return r;
  }

  /* ********************************************************** */
  // PARAMETER IDENTIFIER ((TO|IS) expr)? (COMMA IDENTIFIER ((TO|IS) expr)?)* EOI
  public static boolean declare_parameter_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_parameter_clause")) return false;
    if (!nextTokenIs(b, PARAMETER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, PARAMETER, IDENTIFIER);
    r = r && declare_parameter_clause_2(b, l + 1);
    r = r && declare_parameter_clause_3(b, l + 1);
    r = r && consumeToken(b, EOI);
    exit_section_(b, m, DECLARE_PARAMETER_CLAUSE, r);
    return r;
  }

  // ((TO|IS) expr)?
  private static boolean declare_parameter_clause_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_parameter_clause_2")) return false;
    declare_parameter_clause_2_0(b, l + 1);
    return true;
  }

  // (TO|IS) expr
  private static boolean declare_parameter_clause_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_parameter_clause_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = declare_parameter_clause_2_0_0(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // TO|IS
  private static boolean declare_parameter_clause_2_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_parameter_clause_2_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TO);
    if (!r) r = consumeToken(b, IS);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA IDENTIFIER ((TO|IS) expr)?)*
  private static boolean declare_parameter_clause_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_parameter_clause_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!declare_parameter_clause_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "declare_parameter_clause_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA IDENTIFIER ((TO|IS) expr)?
  private static boolean declare_parameter_clause_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_parameter_clause_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, IDENTIFIER);
    r = r && declare_parameter_clause_3_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ((TO|IS) expr)?
  private static boolean declare_parameter_clause_3_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_parameter_clause_3_0_2")) return false;
    declare_parameter_clause_3_0_2_0(b, l + 1);
    return true;
  }

  // (TO|IS) expr
  private static boolean declare_parameter_clause_3_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_parameter_clause_3_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = declare_parameter_clause_3_0_2_0_0(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // TO|IS
  private static boolean declare_parameter_clause_3_0_2_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_parameter_clause_3_0_2_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TO);
    if (!r) r = consumeToken(b, IS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // declare_parameter_clause |
  //                       declare_function_clause |
  //                       declare_lock_clause |
  //                       (
  //                           (
  //                               (DECLARE (LOCAL|GLOBAL)?) |
  //                               (LOCAL|GLOBAL)
  //                           )
  //                           (
  //                               declare_parameter_clause |
  //                               declare_function_clause |
  //                               declare_identifier_clause |
  //                               declare_lock_clause
  //                           )
  //                       )
  public static boolean declare_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_stmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<declare stmt>");
    r = declare_parameter_clause(b, l + 1);
    if (!r) r = declare_function_clause(b, l + 1);
    if (!r) r = declare_lock_clause(b, l + 1);
    if (!r) r = declare_stmt_3(b, l + 1);
    exit_section_(b, l, m, DECLARE_STMT, r, false, null);
    return r;
  }

  // (
  //                               (DECLARE (LOCAL|GLOBAL)?) |
  //                               (LOCAL|GLOBAL)
  //                           )
  //                           (
  //                               declare_parameter_clause |
  //                               declare_function_clause |
  //                               declare_identifier_clause |
  //                               declare_lock_clause
  //                           )
  private static boolean declare_stmt_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declare_stmt_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = declare_stmt_3_0(b, l + 1);
    r = r && declare_stmt_3_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
